Add snippets pt-BR translation

--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -84,6 +84,7 @@ tr:
     "Archive": Archive
     "Tags": Tags
     "Wallpapers": Wallpapers
+    "Snippets": Snippets
 
     "Members": Members
     "next_page": Próximo página
