new: major changes

--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -110,7 +110,7 @@ tr:
     "site_projects_text": "Caso queira conhecer mais sobre nós, aqui está uma lista de projetos feitos por nossos membros:"
 
     # About labels
-    "author_reach_me": Encontre-os
+    "author_reach_me": "Falar comigo"
     "author_reach_me_text": "Você também pode nos encontrar entrar em outros redes:"
 
     # Archive labels
